# IncomeDataSet

./: README.md  pyproject.toml
api/: README.md  main.py  test_api.py
app/: README.md  app.py
modelo/: 4.Preprocesamiento_Entrenamiento.ipynb  Dockerfile  README.md  train.py
modelo/.ipynb_checkpoints/: 4.Preprocesamiento_Entrenamiento-checkpoint.ipynb
